--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.3.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "v-video-embed": "^1.0.7",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
